--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="span6 offset3">
 		<div class="well">
+			<%= image_tag @pin.image %>
 
 	<p>
   	
@@ -10,12 +11,11 @@
   	
   	<%= @pin.user.name %>
 	</p>
-	<% if current_user == pin.user %>
+	<% if current_user == @pin.user %>
 		<%= link_to 'Edit', edit_pin_path(@pin) %> |
+		<% end %>
 		<%= link_to 'Back', pins_path %>
 	</div>
  </div>
 </div>
-
-
 
